Archive/233dfd364138ba78e5568355ac78bbca-3afcc3bc1f2cd10b247c33a6cde9edad/output
+ g++ -std=c++1y -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:6:19: error: ‘abc’ was not declared in this scope
     std::cout << (abc + "def" + "ghi");
                   ^
